--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- meta tags for SEO -->
+    <meta name="description" content="Play Rock, Paper, Scissors, Lizard, Spock with difficulty levels.">
+
+    <!-- title -->
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 
