Add link to CSS file.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 
     <!-- title -->
     <title>Rock Paper Scissors Lizard Spock</title>
+
+    <!-- CSS file -->
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    
+
 </body>
 
 </html>
