--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <!-- title -->
     <title>Rock Paper Scissors Lizard Spock</title>
 
+    <!-- favicons -->
+
+    <!-- standard -->
+    <link rel="icon" href="assets/favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+
+    <!-- chrome -->
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicons/android-chrome-512x512.png">
+
+    <!-- Apple touch -->
+    <link rel="apple-touch-icon" href="assets/favicons/apple-touch-icon.png">
+
+    <!-- webmanifest -->
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
+
     <!-- CSS file -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
