Add header section.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
 
 <body>
 
-    <header></header>
+    <header class="site-header">
+        <h1>ROCK PAPER SCISSORS LIZARD SPOCK</h1>
+        <p class="site-subtitle">The Classic</p>
+    </header>
 
     <main></main>
 
     <footer></footer>
-    
+
 </body>
 
 </html>
