Add how to play the game instructions.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,26 @@
 
     <header class="site-header">
         <h1>ROCK PAPER SCISSORS LIZARD SPOCK</h1>
-        <p class="site-subtitle">The Classic</p>
+        <p class="site-subtitle">-- The Classic --</p>
     </header>
 
-    <main></main>
+    <main class="site-main">
+        <section class="how-to-play">
+            <button id="how-to-toggle" class="dropdown-toggle" type="button">
+                How to Play ▼
+            </button>
+            <div id="how-to-content" class="dropdown-content" hidden>
+                <h2 class="panel-title">How to Play</h2>
+                <ul class="rules-list">
+                    <li><strong>ROCK</strong> crushes Scissors and Lizard.</li>
+                    <li><strong>PAPER</strong> covers Rock and disproves Spock.</li>
+                    <li><strong>SCISSORS</strong> cuts Paper and decapitates Lizard.</li>
+                    <li><strong>LIZARD</strong> eats Paper and poisons Spock.</li>
+                    <li><strong>SPOCK</strong> smashes Scissors and vaporizes Rock.</li>
+                </ul>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 
