Add section to display game status such as the score card, rounds remaining, etc.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
             <!-- Start/reset button -->
             <button id="start-btn" type="button">Start Game</button>
         </section>
+
+        <!-- Game status -->
+        <section class="panel">
+            <h2 class="panel-title">Game Status</h2>
+
+            <div id="game-status">
+                <p id="score-card">Your score: 0 | Computer score: 0</p>
+                <p id="rounds-info">Rounds remaining: 0</p>
+                <p id="pattern-info">Pattern mode: off</p>
+                <p id="hint-text">Click “Start Game” to begin or reset.</p>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
