Add section that displays the five move buttons. A player clicks one to play a round.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
                 <p id="hint-text">Click “Start Game” to begin or reset.</p>
             </div>
         </section>
+
+        <!-- Player choice section -->
+         <section class="panel">
+            <h2 class="panel-title">Make Your Choice</h2>
+            <p>Select one of the moves below.</p>
+
+            <div class="choice-buttons">
+                <!-- Each button has a data-move attribute for JS -->
+                <button type="button" data-move="rock">🪨 Rock</button>
+                <button type="button" data-move="paper">📜 Paper</button>
+                <button type="button" data-move="scissors">✂️ Scissors</button>
+                <button type="button" data-move="lizard">🦎 Lizard</button>
+                <button type="button" data-move="spock">🖖 Spock</button>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
