This section shows what the player chose. Shows what the computer chose and who won the round.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </section>
 
         <!-- Player choice section -->
-         <section class="panel">
+        <section class="panel">
             <h2 class="panel-title">Make Your Choice</h2>
             <p>Select one of the moves below.</p>
 
@@ -111,6 +111,14 @@
                 <button type="button" data-move="lizard">🦎 Lizard</button>
                 <button type="button" data-move="spock">🖖 Spock</button>
             </div>
+        </section>
+
+        <!-- Rounds summary -->
+        <section class="panel">
+            <h2 class="panel-title">Round Summary</h2>
+            <p>You chose: <span id="player-choice">—</span></p>
+            <p>Computer chose: <span id="computer-choice">—</span></p>
+            <p>Outcome: <span id="round-outcome">—</span></p>
         </section>
     </main>
 
