Add banner that is hidden until game is over.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
             <p>Computer chose: <span id="computer-choice">—</span></p>
             <p>Outcome: <span id="round-outcome">—</span></p>
         </section>
+
+        <!-- Game over banner -->
+        <div id="game-over-banner" aria-live="polite" hidden>
+            <p id="game-over-message"></p>
+
+            <div class="banner-actions">
+                <button id="game-over-restart" type="button">Play Again</button>
+                <button id="game-over-close" type="button">Close</button>
+            </div>
+        </div>
     </main>
 
     <footer></footer>
