Add canvas for confetti.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
                 <button id="game-over-close" type="button">Close</button>
             </div>
         </div>
+        
+        <!-- Confetti-canvas-->
+        <canvas id="confetti-canvas"></canvas>
     </main>
 
     <footer></footer>
