Add footer section.

--- a/index.html
+++ b/index.html
@@ -130,12 +130,22 @@
                 <button id="game-over-close" type="button">Close</button>
             </div>
         </div>
-        
+
         <!-- Confetti-canvas-->
         <canvas id="confetti-canvas"></canvas>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>
+            Learn more about the game on
+            <a href="https://www.youtube.com/results?search_query=rock+paper+scissors+lizard+spock" target="_blank"
+                rel="noreferrer"
+                aria-label="Opens YouTube search results for Rock Paper Scissors Lizard Spock in a new tab">
+                YouTube
+            </a>.
+        </p>
+    </footer>
+
 
 </body>
 
