Add link to JavaScript file.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
                 YouTube
             </a>.
         </p>
+
+        <!-- JavaScript -->
+         <script href="assets/javascript/game.js"></script>
     </footer>
 
 
