Add class to footer.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <canvas id="confetti-canvas"></canvas>
     </main>
 
-    <footer>
+    <footer class="site-footer">
         <p>
             Learn more about the game on
             <a href="https://www.youtube.com/results?search_query=rock+paper+scissors+lizard+spock" target="_blank"
