--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script href="assets/javascript/game.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
