--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <!-- how to play -->
         <section class="how-to-play">
             <button id="how-to-toggle" class="dropdown-toggle" type="button">
-                How to Play ▼
+                How To Play ▼
             </button>
             <div id="how-to-content" class="dropdown-content" hidden>
-                <h2 class="panel-title">How to Play</h2>
+                <h2 class="panel-title">How To Play</h2>
                 <ul class="rules-list">
                     <li><strong>ROCK</strong> crushes Scissors and Lizard.</li>
                     <li><strong>PAPER</strong> covers Rock and disproves Spock.</li>
